--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,99 +5,105 @@
 #    make up
 #
 alabaster==0.7.12         # via sphinx
-appdirs==1.4.3            # via black
+appdirs==1.4.3            # via black, virtualenv
 astroid==2.3.3            # via pylint
-asynctest==0.13.0
-atomicwrites==1.3.0       # via pytest
-attrs==19.3.0
-babel==2.7.0              # via sphinx
-bandit==1.6.2
-black==19.10b0 ; python_version >= "3.6"
-bleach==3.1.0             # via readme-renderer
-cattrs==0.9.0
-certifi==2019.9.11
-chardet==3.0.4
-click==7.0
-colorama==0.4.1           # via green
-coverage==4.5.4           # via coveralls, green, nose2
-coveralls==1.8.2
-digicubes-common==0.0.12
-digicubes-pyclient==0.0.6
-doc8==0.8.0
+asynctest==0.13.0         # via -r requirements-dev.in
+attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-common, digicubes-pyclient, pytest
+babel==2.8.0              # via sphinx
+bandit==1.6.2             # via -r requirements-dev.in
+black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
+bleach==3.1.3             # via readme-renderer
+cattrs==0.9.0             # via -r requirements.txt, digicubes-common, digicubes-pyclient
+certifi==2019.11.28       # via -r requirements.txt, digicubes-pyclient, requests
+cffi==1.14.0              # via cryptography
+chardet==3.0.4            # via -r requirements.txt, digicubes-pyclient, doc8, requests
+click==7.1.1              # via -r requirements.txt, black, flask, pip-tools
+colorama==0.4.3           # via green
+coverage==5.0.4           # via coveralls, green, nose2
+coveralls==1.11.1         # via -r requirements-dev.in
+cryptography==2.8         # via secretstorage
+digicubes-common==0.1.0   # via -r requirements.txt, digicubes-pyclient
+digicubes-pyclient==0.1.2  # via -r requirements.txt
+distlib==0.3.0            # via virtualenv
+doc8==0.8.0               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
-docutils==0.15.2
+docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, sphinx
 entrypoints==0.3          # via flake8
-filelock==3.0.12          # via tox
-flake8-isort==2.7.0
+filelock==3.0.12          # via tox, virtualenv
+flake8-isort==2.9.0       # via -r requirements-dev.in
 flake8==3.7.9             # via flake8-isort
-flask-wtf==0.14.2
-flask==1.1.1
-gitdb2==2.0.6             # via gitpython
-gitpython==3.0.5          # via bandit
-green==3.0.0
-idna==2.8
-imagesize==1.1.0          # via sphinx
-importlib-metadata==0.23  # via pluggy, pytest, tox
-isort==4.3.21             # via flake8-isort, pylint
-itsdangerous==1.1.0
-jinja2==2.10.3
+flask-wtf==0.14.3         # via -r requirements.txt
+flask==1.1.1              # via -r requirements.txt, flask-wtf
+gitdb==4.0.2              # via gitpython
+gitpython==3.1.0          # via bandit
+green==3.1.0              # via -r requirements-dev.in
+idna==2.8                 # via -r requirements.txt, digicubes-pyclient, requests
+imagesize==1.2.0          # via sphinx
+importlib-metadata==1.5.2  # via keyring, pluggy, pytest, tox, twine, virtualenv
+isort[pyproject]==4.3.21  # via flake8-isort, pylint
+itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
+jeepney==0.4.3            # via keyring, secretstorage
+jinja2==2.11.1            # via -r requirements.txt, flask, pybadges, sphinx
+keyring==21.2.0           # via twine
 lazy-object-proxy==1.4.3  # via astroid
-lxml==4.4.1               # via green
-markupsafe==1.1.1
+lxml==4.5.0               # via green
+markupsafe==1.1.1         # via -r requirements.txt, jinja2
 mccabe==0.6.1             # via flake8, pylint
-more-itertools==7.2.0     # via pytest, zipp
+more-itertools==8.2.0     # via pytest
 mypy-extensions==0.4.3    # via mypy
-mypy==0.740
-nose2==0.9.1
-packaging==19.2           # via pytest, sphinx, tox
-pathspec==0.6.0           # via black
-pbr==5.4.3                # via stevedore
-pip-tools==4.2.0
+mypy==0.770               # via -r requirements-dev.in
+nose2==0.9.2              # via -r requirements-dev.in
+packaging==20.3           # via pytest, sphinx, tox
+pathspec==0.7.0           # via black
+pbr==5.4.4                # via stevedore
+pip-tools==4.5.1          # via -r requirements-dev.in
 pkginfo==1.5.0.1          # via twine
-pluggy==0.13.0            # via pytest, tox
-py==1.8.0                 # via pytest, tox
-pybadges==2.2.1
+pluggy==0.13.1            # via pytest, tox
+py==1.8.1                 # via pytest, tox
+pybadges==2.2.1           # via -r requirements-dev.in
 pycodestyle==2.5.0        # via flake8
+pycparser==2.20           # via cffi
 pyflakes==2.1.1           # via flake8
-pygments==2.4.2
-pylint==2.4.4
-pyparsing==2.4.5          # via packaging
-pytest==5.2.4
+pygments==2.6.1           # via -r requirements-dev.in, readme-renderer, sphinx
+pylint==2.4.4             # via -r requirements-dev.in
+pyparsing==2.4.6          # via packaging
+pytest==5.4.1             # via -r requirements-dev.in
 pytz==2019.3              # via babel
-pyyaml==5.1.2             # via bandit
-readme-renderer==24.0     # via twine
-regex==2019.11.1          # via black
+pyyaml==5.3.1             # via bandit
+readme-renderer==25.0     # via twine
+regex==2020.2.20          # via black
 requests-toolbelt==0.9.1  # via twine
-requests==2.22.0
+requests==2.22.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
 restructuredtext-lint==1.3.0  # via doc8
-six==1.13.0               # via astroid, bandit, bleach, doc8, nose2, packaging, pip-tools, readme-renderer, stevedore, tox
-smmap2==2.0.5             # via gitdb2
+secretstorage==3.1.2      # via keyring
+six==1.14.0               # via astroid, bandit, bleach, cryptography, doc8, nose2, packaging, pip-tools, readme-renderer, stevedore, tox, virtualenv
+smmap==3.0.1              # via gitdb
 snowballstemmer==2.0.0    # via sphinx
-sphinx-rtd-theme==0.4.3
-sphinx==2.2.1
-sphinxcontrib-applehelp==1.0.1  # via sphinx
-sphinxcontrib-devhelp==1.0.1  # via sphinx
-sphinxcontrib-htmlhelp==1.0.2  # via sphinx
+sphinx-rtd-theme==0.4.3   # via -r requirements-dev.in
+sphinx==2.4.4             # via -r requirements-dev.in, sphinx-rtd-theme
+sphinxcontrib-applehelp==1.0.2  # via sphinx
+sphinxcontrib-devhelp==1.0.2  # via sphinx
+sphinxcontrib-htmlhelp==1.0.3  # via sphinx
 sphinxcontrib-jsmath==1.0.1  # via sphinx
-sphinxcontrib-qthelp==1.0.2  # via sphinx
-sphinxcontrib-serializinghtml==1.1.3  # via sphinx
-stevedore==1.31.0         # via bandit, doc8
-testfixtures==6.10.2      # via flake8-isort
-toml==0.10.0              # via black, tox
-tox==3.14.1
-tqdm==4.38.0              # via twine
-twine==2.0.0
-typed-ast==1.4.0          # via astroid, black, mypy
+sphinxcontrib-qthelp==1.0.3  # via sphinx
+sphinxcontrib-serializinghtml==1.1.4  # via sphinx
+stevedore==1.32.0         # via bandit, doc8
+testfixtures==6.14.0      # via flake8-isort
+toml==0.10.0              # via black, isort, tox
+tox==3.14.6               # via -r requirements-dev.in
+tqdm==4.43.0              # via twine
+twine==3.1.1              # via -r requirements-dev.in
+typed-ast==1.4.1          # via astroid, black, mypy
 typing-extensions==3.7.4.1  # via mypy
 unidecode==1.1.1          # via green
-urllib3==1.25.7
-virtualenv==16.7.7        # via tox
-wcwidth==0.1.7            # via pytest
+urllib3==1.25.7           # via -r requirements.txt, digicubes-pyclient, requests
+virtualenv==20.0.14       # via tox
+wcwidth==0.1.9            # via pytest
 webencodings==0.5.1       # via bleach
-werkzeug==0.16.0
+werkzeug==1.0.0           # via -r requirements.txt, flask
 wrapt==1.11.2             # via astroid
-wtforms==2.2.1
-zipp==0.6.0               # via importlib-metadata
+wtforms==2.2.1            # via -r requirements.txt, flask-wtf
+zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.6.0        # via sphinx, twine
+# setuptools
