--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,18 @@
 #
 attrs==19.3.0             # via cattrs, digicubes-common, digicubes-pyclient
 cattrs==0.9.0             # via digicubes-common, digicubes-pyclient
-certifi==2019.9.11        # via digicubes-pyclient, requests
+certifi==2019.11.28       # via digicubes-pyclient, requests
 chardet==3.0.4            # via digicubes-pyclient, requests
-click==7.0                # via flask
-digicubes-common==0.0.12  # via digicubes-pyclient
-digicubes-pyclient==0.0.6
-flask-wtf==0.14.2
-flask==1.1.1
+click==7.1.1              # via flask
+digicubes-common==0.1.0   # via digicubes-pyclient
+digicubes-pyclient==0.1.2  # via -r requirements.in
+flask-wtf==0.14.3         # via -r requirements.in
+flask==1.1.1              # via -r requirements.in, flask-wtf
 idna==2.8                 # via digicubes-pyclient, requests
-itsdangerous==1.1.0       # via flask
-jinja2==2.10.3            # via flask
+itsdangerous==1.1.0       # via flask, flask-wtf
+jinja2==2.11.1            # via flask
 markupsafe==1.1.1         # via jinja2
-requests==2.22.0
+requests==2.22.0          # via -r requirements.in, digicubes-pyclient
 urllib3==1.25.7           # via digicubes-pyclient, requests
-werkzeug==0.16.0          # via flask
+werkzeug==1.0.0           # via flask
 wtforms==2.2.1            # via flask-wtf
