--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "python.pythonPath": "venv/bin/python",
-    "restructuredtext.confPath": ""
+    "python.pythonPath": "${workspaceFolder}/venv/bin/python",
+    "restructuredtext.confPath": "",
+    "python.formatting.provider": "black",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true
 }
