--- a/digicubes_flask/cfg/default_configuration.yaml
+++ b/digicubes_flask/cfg/default_configuration.yaml
@@ -1,35 +1,7 @@
+secret: "djsjah67sh7/&)788hxcbxsh"
 
 TOKEN_COOKIE_NAME: "digicubes.token"
 TOKEN_SESSION_NAME: "digicubes.account"
-
-# Core System
-# -------------
-DIGICUBES_SYS_ROLES: # THe minimum roles, we need
-    -
-        name: root
-        rights:
-            - CREATE_SCHOOL
-            - READ_SCHOOL
-            - UPDATE_SCHOOL
-            - DELETE_SCHOOL
-            - CREATE_USER
-            - READ_USER
-            - UPDATE_USER
-            - DELETE_USER
-            - READ_RIGHT
-            - READ_ROLE        
-
-    - 
-        name: admin
-        rights:
-            - CREATE_CLASS
-            - UPDATE_CLASS
-            - VIEW_CLASSES
-
-    -
-        name: student
-        rights:
-            - VIEW_CLASSES
 
 # Account space
 # -------------
@@ -39,23 +11,19 @@ DIGICUBES_ACCOUNT_URL_PREFIX: "/account"
 # if the user has more than one role. Otherwise
 # chains to the homepage for his role.  
 DIGICUBES_DISPATCHER_VIEW: "account.home"
-DIGICUBES_DISPATCHER_HOMES:
-    root: "account.index"
-    Admin: "admin.index"
 
 # If true, new users are verified automatically
 # after registration
 DIGICUBES_ACCOUNT_AUTO_VERIFY: true
 
-DIGICUBES_ACCOUNT_LOGIN_VIEW: "account.login"
-DIGICUBES_ACCOUNT_REGISTER_VIEW: "account.register"
-DIGICUBES_ACCOUNT_INDEX_VIEW: "account.home"
-DIGICUBES_ACCOUNT_HOME_VIEW: "account.index"
-
-# Admin space
-DIGICUBES_ADMIN_URL_PREFIX: "/admin"
-DIGICUBES_ADMIN_HOME_VIEW: "admin.index"
-
 DIGICUBES_API_SERVER_PROTOCOL: "http"
 DIGICUBES_API_SERVER_HOSTNAME: "localhost"
 DIGICUBES_API_SERVER_PORT: 3000
+
+smtp_host: !ENV ${DC_SMTP_HOST}
+smtp_port: !ENV ${DC_SMTP_PORT}
+smtp_use_ssl: true
+smtp_username: !ENV ${DC_SMTP_USERNAME}
+smtp_password: !ENV ${DC_SMTP_PASSWORD}
+smtp_from_email_addr: !ENV ${DC_FROM_EMAIL_ADDR}
+smtp_from_display_name: !ENV ${DC_FROM_DISPLAY_NAME}
