--- a/digicubes_flask/cfg/default_configuration.yaml
+++ b/digicubes_flask/cfg/default_configuration.yaml
@@ -10,7 +10,7 @@ student_prefix: "/dcst"
 
 # If true, new users are verified automatically
 # after registration
-auto_verify: true
+auto_verify: false
 
 api_server_protocol: "http"
 api_server_host: "localhost"
@@ -19,10 +19,14 @@ api_server_port: 3000
 # Information abaout the smtpserver
 # used to send verification and information
 # emails to user.
-smtp_host: !ENV ${DC_SMTP_HOST}
-smtp_port: !ENV ${DC_SMTP_PORT}
-smtp_use_ssl: true
-smtp_username: !ENV ${DC_SMTP_USERNAME}
-smtp_password: !ENV ${DC_SMTP_PASSWORD}
-smtp_from_email_addr: !ENV ${DC_FROM_EMAIL_ADDR}
-smtp_from_display_name: !ENV ${DC_FROM_DISPLAY_NAME}
+
+mail_cube:
+  number_of_tries: 10
+  number_of_workers: 1 
+  smtp_host: !ENV ${DC_SMTP_HOST}
+  smtp_port: !ENV ${DC_SMTP_PORT}
+  smtp_use_ssl: true
+  smtp_username: !ENV ${DC_SMTP_USERNAME}
+  smtp_password: !ENV ${DC_SMTP_PASSWORD}
+  smtp_from_email_addr: !ENV ${DC_FROM_EMAIL_ADDR}
+  smtp_from_display_name: !ENV ${DC_FROM_DISPLAY_NAME}
