--- a/requirements.in
+++ b/requirements.in
@@ -1,12 +1,11 @@
 #cattrs
 flask
 flask_wtf
-flask_moment
 
 pyjwt
 requests
 markdown
 Markupsafe
-python-dotoenv
+python-dotenv
 
 digicubes-pyclient
