--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,51 +12,53 @@ attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-co
 babel==2.8.0              # via sphinx
 bandit==1.6.2             # via -r requirements-dev.in
 black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
-bleach==3.1.3             # via readme-renderer
-cattrs==0.9.0             # via -r requirements.txt, digicubes-common, digicubes-pyclient
+bleach==3.1.4             # via readme-renderer
+cattrs==1.0.0             # via -r requirements.txt, digicubes-common, digicubes-pyclient
 certifi==2019.11.28       # via -r requirements.txt, digicubes-pyclient, requests
 cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via -r requirements.txt, digicubes-pyclient, doc8, requests
 click==7.1.1              # via -r requirements.txt, black, flask, pip-tools
 colorama==0.4.3           # via green
-coverage==5.0.4           # via coveralls, green, nose2
-coveralls==1.11.1         # via -r requirements-dev.in
-cryptography==2.8         # via secretstorage
-digicubes-common==0.1.0   # via -r requirements.txt, digicubes-pyclient
-digicubes-pyclient==0.1.2  # via -r requirements.txt
+coverage==5.1             # via coveralls, green, nose2
+coveralls==2.0.0          # via -r requirements-dev.in
+cryptography==2.9.1       # via secretstorage
+digicubes-common==0.1.1   # via -r requirements.txt, digicubes-pyclient
+digicubes-pyclient==0.1.3  # via -r requirements.txt
 distlib==0.3.0            # via virtualenv
 doc8==0.8.0               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
 docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, sphinx
 entrypoints==0.3          # via flake8
 filelock==3.0.12          # via tox, virtualenv
-flake8-isort==2.9.0       # via -r requirements-dev.in
+flake8-isort==3.0.0       # via -r requirements-dev.in
 flake8==3.7.9             # via flake8-isort
 flask-wtf==0.14.3         # via -r requirements.txt
-flask==1.1.1              # via -r requirements.txt, flask-wtf
-gitdb==4.0.2              # via gitpython
-gitpython==3.1.0          # via bandit
+flask==1.1.2              # via -r requirements.txt, flask-wtf
+gitdb==4.0.4              # via gitpython
+gitpython==3.1.1          # via bandit
 green==3.1.0              # via -r requirements-dev.in
-idna==2.8                 # via -r requirements.txt, digicubes-pyclient, requests
+idna==2.9                 # via -r requirements.txt, digicubes-pyclient, requests
 imagesize==1.2.0          # via sphinx
-importlib-metadata==1.5.2  # via keyring, pluggy, pytest, tox, twine, virtualenv
+importlib-metadata==1.6.0  # via keyring, pluggy, pytest, tox, twine, virtualenv
 isort[pyproject]==4.3.21  # via flake8-isort, pylint
 itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
 jeepney==0.4.3            # via keyring, secretstorage
-jinja2==2.11.1            # via -r requirements.txt, flask, pybadges, sphinx
+jinja2==2.11.2            # via -r requirements.txt, flask, pybadges, sphinx
 keyring==21.2.0           # via twine
 lazy-object-proxy==1.4.3  # via astroid
+libgravatar==0.2.3        # via -r requirements.txt
 lxml==4.5.0               # via green
-markupsafe==1.1.1         # via -r requirements.txt, jinja2
+markdown==3.2.1           # via -r requirements.txt
+markupsafe==1.1.1         # via -r requirements.txt, jinja2, wtforms
 mccabe==0.6.1             # via flake8, pylint
 more-itertools==8.2.0     # via pytest
 mypy-extensions==0.4.3    # via mypy
 mypy==0.770               # via -r requirements-dev.in
 nose2==0.9.2              # via -r requirements-dev.in
 packaging==20.3           # via pytest, sphinx, tox
-pathspec==0.7.0           # via black
-pbr==5.4.4                # via stevedore
-pip-tools==4.5.1          # via -r requirements-dev.in
+pathspec==0.8.0           # via black
+pbr==5.4.5                # via stevedore
+pip-tools==5.0.0          # via -r requirements-dev.in
 pkginfo==1.5.0.1          # via twine
 pluggy==0.13.1            # via pytest, tox
 py==1.8.1                 # via pytest, tox
@@ -65,22 +67,24 @@ pycodestyle==2.5.0        # via flake8
 pycparser==2.20           # via cffi
 pyflakes==2.1.1           # via flake8
 pygments==2.6.1           # via -r requirements-dev.in, readme-renderer, sphinx
+pyjwt==1.7.1              # via -r requirements.txt
 pylint==2.4.4             # via -r requirements-dev.in
-pyparsing==2.4.6          # via packaging
+pyparsing==2.4.7          # via packaging
 pytest==5.4.1             # via -r requirements-dev.in
+python-dotenv==0.13.0     # via -r requirements.txt
 pytz==2019.3              # via babel
 pyyaml==5.3.1             # via bandit
 readme-renderer==25.0     # via twine
-regex==2020.2.20          # via black
+regex==2020.4.4           # via black
 requests-toolbelt==0.9.1  # via twine
-requests==2.22.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
+requests==2.23.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
 restructuredtext-lint==1.3.0  # via doc8
 secretstorage==3.1.2      # via keyring
 six==1.14.0               # via astroid, bandit, bleach, cryptography, doc8, nose2, packaging, pip-tools, readme-renderer, stevedore, tox, virtualenv
-smmap==3.0.1              # via gitdb
+smmap==3.0.2              # via gitdb
 snowballstemmer==2.0.0    # via sphinx
 sphinx-rtd-theme==0.4.3   # via -r requirements-dev.in
-sphinx==2.4.4             # via -r requirements-dev.in, sphinx-rtd-theme
+sphinx==3.0.2             # via -r requirements-dev.in, sphinx-rtd-theme
 sphinxcontrib-applehelp==1.0.2  # via sphinx
 sphinxcontrib-devhelp==1.0.2  # via sphinx
 sphinxcontrib-htmlhelp==1.0.3  # via sphinx
@@ -88,22 +92,23 @@ sphinxcontrib-jsmath==1.0.1  # via sphinx
 sphinxcontrib-qthelp==1.0.3  # via sphinx
 sphinxcontrib-serializinghtml==1.1.4  # via sphinx
 stevedore==1.32.0         # via bandit, doc8
-testfixtures==6.14.0      # via flake8-isort
+testfixtures==6.14.1      # via flake8-isort
 toml==0.10.0              # via black, isort, tox
 tox==3.14.6               # via -r requirements-dev.in
-tqdm==4.43.0              # via twine
+tqdm==4.45.0              # via twine
 twine==3.1.1              # via -r requirements-dev.in
 typed-ast==1.4.1          # via astroid, black, mypy
-typing-extensions==3.7.4.1  # via mypy
+typing-extensions==3.7.4.2  # via mypy
 unidecode==1.1.1          # via green
-urllib3==1.25.7           # via -r requirements.txt, digicubes-pyclient, requests
-virtualenv==20.0.14       # via tox
+urllib3==1.25.8           # via -r requirements.txt, digicubes-pyclient, requests
+virtualenv==20.0.18       # via tox
 wcwidth==0.1.9            # via pytest
 webencodings==0.5.1       # via bleach
-werkzeug==1.0.0           # via -r requirements.txt, flask
+werkzeug==1.0.1           # via -r requirements.txt, flask
 wrapt==1.11.2             # via astroid
-wtforms==2.2.1            # via -r requirements.txt, flask-wtf
+wtforms==2.3.0            # via -r requirements.txt, flask-wtf
 zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
+# pip
 # setuptools
