--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,26 @@
 #    make up
 #
 attrs==19.3.0             # via cattrs, digicubes-common, digicubes-pyclient
-cattrs==0.9.0             # via digicubes-common, digicubes-pyclient
+cattrs==1.0.0             # via digicubes-common, digicubes-pyclient
 certifi==2019.11.28       # via digicubes-pyclient, requests
 chardet==3.0.4            # via digicubes-pyclient, requests
 click==7.1.1              # via flask
-digicubes-common==0.1.0   # via digicubes-pyclient
-digicubes-pyclient==0.1.2  # via -r requirements.in
+digicubes-common==0.1.1   # via digicubes-pyclient
+digicubes-pyclient==0.1.3  # via -r requirements.in
 flask-wtf==0.14.3         # via -r requirements.in
-flask==1.1.1              # via -r requirements.in, flask-wtf
-idna==2.8                 # via digicubes-pyclient, requests
+flask==1.1.2              # via -r requirements.in, flask-wtf
+idna==2.9                 # via digicubes-pyclient, requests
 itsdangerous==1.1.0       # via flask, flask-wtf
-jinja2==2.11.1            # via flask
-markupsafe==1.1.1         # via jinja2
-requests==2.22.0          # via -r requirements.in, digicubes-pyclient
-urllib3==1.25.7           # via digicubes-pyclient, requests
-werkzeug==1.0.0           # via flask
-wtforms==2.2.1            # via flask-wtf
+jinja2==2.11.2            # via flask
+libgravatar==0.2.3        # via -r requirements.in
+markdown==3.2.1           # via -r requirements.in
+markupsafe==1.1.1         # via -r requirements.in, jinja2, wtforms
+pyjwt==1.7.1              # via -r requirements.in
+python-dotenv==0.13.0     # via -r requirements.in
+requests==2.23.0          # via -r requirements.in, digicubes-pyclient
+urllib3==1.25.8           # via digicubes-pyclient, requests
+werkzeug==1.0.1           # via flask
+wtforms==2.3.0            # via flask-wtf
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
