--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,20 +14,22 @@ bandit==1.6.2             # via -r requirements-dev.in
 black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
 bleach==3.1.4             # via readme-renderer
 cattrs==1.0.0             # via -r requirements.txt, digicubes-common, digicubes-pyclient
-certifi==2019.11.28       # via -r requirements.txt, digicubes-pyclient, requests
+certifi==2020.4.5.1       # via -r requirements.txt, digicubes-pyclient, requests
 cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via -r requirements.txt, digicubes-pyclient, doc8, requests
 click==7.1.1              # via -r requirements.txt, black, flask, pip-tools
 colorama==0.4.3           # via green
 coverage==5.1             # via coveralls, green, nose2
 coveralls==2.0.0          # via -r requirements-dev.in
-cryptography==2.9.1       # via secretstorage
-digicubes-common==0.1.1   # via -r requirements.txt, digicubes-pyclient
-digicubes-pyclient==0.1.3  # via -r requirements.txt
+cryptography==2.9.2       # via secretstorage
+digicubes-common==0.1.2   # via -r requirements.txt, digicubes-pyclient
+digicubes-pyclient==0.1.4  # via -r requirements.txt
 distlib==0.3.0            # via virtualenv
+dnspython==1.16.0         # via -r requirements.txt, email-validator
 doc8==0.8.0               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
 docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, sphinx
+email-validator==1.0.5    # via -r requirements.txt
 entrypoints==0.3          # via flake8
 filelock==3.0.12          # via tox, virtualenv
 flake8-isort==3.0.0       # via -r requirements-dev.in
@@ -36,8 +38,9 @@ flask-wtf==0.14.3         # via -r requirements.txt
 flask==1.1.2              # via -r requirements.txt, flask-wtf
 gitdb==4.0.4              # via gitpython
 gitpython==3.1.1          # via bandit
-green==3.1.0              # via -r requirements-dev.in
-idna==2.9                 # via -r requirements.txt, digicubes-pyclient, requests
+green==3.1.1              # via -r requirements-dev.in
+gunicorn==20.0.4          # via -r requirements.txt
+idna==2.9                 # via -r requirements.txt, digicubes-pyclient, email-validator, requests
 imagesize==1.2.0          # via sphinx
 importlib-metadata==1.6.0  # via keyring, pluggy, pytest, tox, twine, virtualenv
 isort[pyproject]==4.3.21  # via flake8-isort, pylint
@@ -62,6 +65,7 @@ pip-tools==5.0.0          # via -r requirements-dev.in
 pkginfo==1.5.0.1          # via twine
 pluggy==0.13.1            # via pytest, tox
 py==1.8.1                 # via pytest, tox
+pyaml==20.4.0             # via -r requirements.txt
 pybadges==2.2.1           # via -r requirements-dev.in
 pycodestyle==2.5.0        # via flake8
 pycparser==2.20           # via cffi
@@ -73,8 +77,8 @@ pyparsing==2.4.7          # via packaging
 pytest==5.4.1             # via -r requirements-dev.in
 python-dotenv==0.13.0     # via -r requirements.txt
 pytz==2019.3              # via babel
-pyyaml==5.3.1             # via bandit
-readme-renderer==25.0     # via twine
+pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
+readme-renderer==26.0     # via twine
 regex==2020.4.4           # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.23.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
@@ -84,7 +88,7 @@ six==1.14.0               # via astroid, bandit, bleach, cryptography, doc8, nos
 smmap==3.0.2              # via gitdb
 snowballstemmer==2.0.0    # via sphinx
 sphinx-rtd-theme==0.4.3   # via -r requirements-dev.in
-sphinx==3.0.2             # via -r requirements-dev.in, sphinx-rtd-theme
+sphinx==3.0.3             # via -r requirements-dev.in, sphinx-rtd-theme
 sphinxcontrib-applehelp==1.0.2  # via sphinx
 sphinxcontrib-devhelp==1.0.2  # via sphinx
 sphinxcontrib-htmlhelp==1.0.3  # via sphinx
@@ -100,13 +104,13 @@ twine==3.1.1              # via -r requirements-dev.in
 typed-ast==1.4.1          # via astroid, black, mypy
 typing-extensions==3.7.4.2  # via mypy
 unidecode==1.1.1          # via green
-urllib3==1.25.8           # via -r requirements.txt, digicubes-pyclient, requests
+urllib3==1.25.9           # via -r requirements.txt, digicubes-pyclient, requests
 virtualenv==20.0.18       # via tox
 wcwidth==0.1.9            # via pytest
 webencodings==0.5.1       # via bleach
 werkzeug==1.0.1           # via -r requirements.txt, flask
 wrapt==1.11.2             # via astroid
-wtforms==2.3.0            # via -r requirements.txt, flask-wtf
+wtforms==2.3.1            # via -r requirements.txt, flask-wtf
 zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
