--- a/requirements.txt
+++ b/requirements.txt
@@ -6,25 +6,30 @@
 #
 attrs==19.3.0             # via cattrs, digicubes-common, digicubes-pyclient
 cattrs==1.0.0             # via digicubes-common, digicubes-pyclient
-certifi==2019.11.28       # via digicubes-pyclient, requests
+certifi==2020.4.5.1       # via digicubes-pyclient, requests
 chardet==3.0.4            # via digicubes-pyclient, requests
 click==7.1.1              # via flask
-digicubes-common==0.1.1   # via digicubes-pyclient
-digicubes-pyclient==0.1.3  # via -r requirements.in
+digicubes-common==0.1.2   # via digicubes-pyclient
+digicubes-pyclient==0.1.4  # via -r requirements.in
+dnspython==1.16.0         # via email-validator
+email-validator==1.0.5    # via -r requirements.in
 flask-wtf==0.14.3         # via -r requirements.in
 flask==1.1.2              # via -r requirements.in, flask-wtf
-idna==2.9                 # via digicubes-pyclient, requests
+gunicorn==20.0.4          # via -r requirements.in
+idna==2.9                 # via digicubes-pyclient, email-validator, requests
 itsdangerous==1.1.0       # via flask, flask-wtf
 jinja2==2.11.2            # via flask
 libgravatar==0.2.3        # via -r requirements.in
 markdown==3.2.1           # via -r requirements.in
 markupsafe==1.1.1         # via -r requirements.in, jinja2, wtforms
+pyaml==20.4.0             # via -r requirements.in
 pyjwt==1.7.1              # via -r requirements.in
 python-dotenv==0.13.0     # via -r requirements.in
+pyyaml==5.3.1             # via pyaml
 requests==2.23.0          # via -r requirements.in, digicubes-pyclient
-urllib3==1.25.8           # via digicubes-pyclient, requests
+urllib3==1.25.9           # via digicubes-pyclient, requests
 werkzeug==1.0.1           # via flask
-wtforms==2.3.0            # via flask-wtf
+wtforms==2.3.1            # via flask-wtf
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
