--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,7 @@
 #
 alabaster==0.7.12         # via sphinx
 appdirs==1.4.3            # via black, virtualenv
-astroid==2.3.3            # via pylint
+astroid==2.4.0            # via pylint
 asynctest==0.13.0         # via -r requirements-dev.in
 attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-common, digicubes-pyclient, pytest
 babel==2.8.0              # via sphinx
@@ -22,8 +22,8 @@ colorama==0.4.3           # via green
 coverage==5.1             # via coveralls, green, nose2
 coveralls==2.0.0          # via -r requirements-dev.in
 cryptography==2.9.2       # via secretstorage
-digicubes-common==0.1.2   # via -r requirements.txt, digicubes-pyclient
-digicubes-pyclient==0.1.4  # via -r requirements.txt
+digicubes-common==0.1.3   # via -r requirements.txt, digicubes-pyclient
+digicubes-pyclient==0.1.6  # via -r requirements.txt
 distlib==0.3.0            # via virtualenv
 dnspython==1.16.0         # via -r requirements.txt, email-validator
 doc8==0.8.0               # via -r requirements-dev.in
@@ -61,7 +61,7 @@ nose2==0.9.2              # via -r requirements-dev.in
 packaging==20.3           # via pytest, sphinx, tox
 pathspec==0.8.0           # via black
 pbr==5.4.5                # via stevedore
-pip-tools==5.0.0          # via -r requirements-dev.in
+pip-tools==5.1.0          # via -r requirements-dev.in
 pkginfo==1.5.0.1          # via twine
 pluggy==0.13.1            # via pytest, tox
 py==1.8.1                 # via pytest, tox
@@ -72,7 +72,7 @@ pycparser==2.20           # via cffi
 pyflakes==2.1.1           # via flake8
 pygments==2.6.1           # via -r requirements-dev.in, readme-renderer, sphinx
 pyjwt==1.7.1              # via -r requirements.txt
-pylint==2.4.4             # via -r requirements-dev.in
+pylint==2.5.0             # via -r requirements-dev.in
 pyparsing==2.4.7          # via packaging
 pytest==5.4.1             # via -r requirements-dev.in
 python-dotenv==0.13.0     # via -r requirements.txt
@@ -97,7 +97,7 @@ sphinxcontrib-qthelp==1.0.3  # via sphinx
 sphinxcontrib-serializinghtml==1.1.4  # via sphinx
 stevedore==1.32.0         # via bandit, doc8
 testfixtures==6.14.1      # via flake8-isort
-toml==0.10.0              # via black, isort, tox
+toml==0.10.0              # via black, isort, pylint, tox
 tox==3.14.6               # via -r requirements-dev.in
 tqdm==4.45.0              # via twine
 twine==3.1.1              # via -r requirements-dev.in
@@ -109,7 +109,7 @@ virtualenv==20.0.18       # via tox
 wcwidth==0.1.9            # via pytest
 webencodings==0.5.1       # via bleach
 werkzeug==1.0.1           # via -r requirements.txt, flask
-wrapt==1.11.2             # via astroid
+wrapt==1.12.1             # via astroid
 wtforms==2.3.1            # via -r requirements.txt, flask-wtf
 zipp==3.1.0               # via importlib-metadata
 
