--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,7 +17,7 @@ cattrs==1.0.0             # via -r requirements.txt, digicubes-common, digicubes
 certifi==2020.4.5.1       # via -r requirements.txt, digicubes-pyclient, requests
 cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via -r requirements.txt, digicubes-pyclient, doc8, requests
-click==7.1.1              # via -r requirements.txt, black, flask, pip-tools
+click==7.1.2              # via -r requirements.txt, black, flask, pip-tools
 colorama==0.4.3           # via green
 coverage==5.1             # via coveralls, green, nose2
 coveralls==2.0.0          # via -r requirements-dev.in
@@ -28,7 +28,7 @@ distlib==0.3.0            # via virtualenv
 dnspython==1.16.0         # via -r requirements.txt, email-validator
 doc8==0.8.0               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
-docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, sphinx
+docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, rstcheck, sphinx
 email-validator==1.0.5    # via -r requirements.txt
 entrypoints==0.3          # via flake8
 filelock==3.0.12          # via tox, virtualenv
@@ -76,22 +76,24 @@ pylint==2.5.0             # via -r requirements-dev.in
 pyparsing==2.4.7          # via packaging
 pytest==5.4.1             # via -r requirements-dev.in
 python-dotenv==0.13.0     # via -r requirements.txt
-pytz==2019.3              # via babel
+pytz==2020.1              # via babel
 pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
 readme-renderer==26.0     # via twine
 regex==2020.4.4           # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.23.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
 restructuredtext-lint==1.3.0  # via doc8
+rstcheck==3.3.1           # via -r requirements-dev.in
 secretstorage==3.1.2      # via keyring
-six==1.14.0               # via astroid, bandit, bleach, cryptography, doc8, nose2, packaging, pip-tools, readme-renderer, stevedore, tox, virtualenv
+six==1.14.0               # via astroid, bandit, bleach, cryptography, doc8, nose2, packaging, pip-tools, readme-renderer, sphinxcontrib-httpdomain, stevedore, tox, virtualenv
 smmap==3.0.2              # via gitdb
 snowballstemmer==2.0.0    # via sphinx
 sphinx-rtd-theme==0.4.3   # via -r requirements-dev.in
-sphinx==3.0.3             # via -r requirements-dev.in, sphinx-rtd-theme
+sphinx==3.0.3             # via -r requirements-dev.in, sphinx-rtd-theme, sphinxcontrib-httpdomain
 sphinxcontrib-applehelp==1.0.2  # via sphinx
 sphinxcontrib-devhelp==1.0.2  # via sphinx
 sphinxcontrib-htmlhelp==1.0.3  # via sphinx
+sphinxcontrib-httpdomain==1.7.0  # via -r requirements-dev.in
 sphinxcontrib-jsmath==1.0.1  # via sphinx
 sphinxcontrib-qthelp==1.0.3  # via sphinx
 sphinxcontrib-serializinghtml==1.1.4  # via sphinx
