--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,7 +12,7 @@ attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-co
 babel==2.8.0              # via sphinx
 bandit==1.6.2             # via -r requirements-dev.in
 black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
-bleach==3.1.4             # via readme-renderer
+bleach==3.1.5             # via readme-renderer
 cattrs==1.0.0             # via -r requirements.txt, digicubes-common, digicubes-pyclient
 certifi==2020.4.5.1       # via -r requirements.txt, digicubes-pyclient, requests
 cffi==1.14.0              # via cryptography
@@ -23,13 +23,13 @@ coverage==5.1             # via coveralls, green, nose2
 coveralls==2.0.0          # via -r requirements-dev.in
 cryptography==2.9.2       # via secretstorage
 digicubes-common==0.1.3   # via -r requirements.txt, digicubes-pyclient
-digicubes-pyclient==0.1.6  # via -r requirements.txt
+digicubes-pyclient==0.1.8  # via -r requirements.txt
 distlib==0.3.0            # via virtualenv
 dnspython==1.16.0         # via -r requirements.txt, email-validator
 doc8==0.8.0               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
 docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, rstcheck, sphinx
-email-validator==1.0.5    # via -r requirements.txt
+email-validator==1.1.0    # via -r requirements.txt
 entrypoints==0.3          # via flake8
 filelock==3.0.12          # via tox, virtualenv
 flake8-isort==3.0.0       # via -r requirements-dev.in
@@ -47,7 +47,7 @@ isort[pyproject]==4.3.21  # via flake8-isort, pylint
 itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
 jeepney==0.4.3            # via keyring, secretstorage
 jinja2==2.11.2            # via -r requirements.txt, flask, pybadges, sphinx
-keyring==21.2.0           # via twine
+keyring==21.2.1           # via twine
 lazy-object-proxy==1.4.3  # via astroid
 libgravatar==0.2.3        # via -r requirements.txt
 lxml==4.5.0               # via green
@@ -58,10 +58,10 @@ more-itertools==8.2.0     # via pytest
 mypy-extensions==0.4.3    # via mypy
 mypy==0.770               # via -r requirements-dev.in
 nose2==0.9.2              # via -r requirements-dev.in
-packaging==20.3           # via pytest, sphinx, tox
+packaging==20.3           # via bleach, pytest, sphinx, tox
 pathspec==0.8.0           # via black
 pbr==5.4.5                # via stevedore
-pip-tools==5.1.0          # via -r requirements-dev.in
+pip-tools==5.1.1          # via -r requirements-dev.in
 pkginfo==1.5.0.1          # via twine
 pluggy==0.13.1            # via pytest, tox
 py==1.8.1                 # via pytest, tox
