--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ certifi==2020.4.5.1       # via digicubes-pyclient, requests
 chardet==3.0.4            # via digicubes-pyclient, requests
 click==7.1.2              # via flask
 digicubes-common==0.1.6   # via digicubes-pyclient
-digicubes-pyclient==0.1.19  # via -r requirements.in
+digicubes-pyclient==0.1.21  # via -r requirements.in
 dnspython==1.16.0         # via email-validator
 email-validator==1.1.0    # via -r requirements.in
 flask-wtf==0.14.3         # via -r requirements.in
@@ -26,6 +26,7 @@ pyaml==20.4.0             # via -r requirements.in
 pyjwt==1.7.1              # via -r requirements.in
 python-dotenv==0.13.0     # via -r requirements.in
 pyyaml==5.3.1             # via pyaml
+redis==3.5.1              # via digicubes-pyclient
 requests==2.23.0          # via -r requirements.in, digicubes-pyclient
 urllib3==1.25.9           # via digicubes-pyclient, requests
 werkzeug==1.0.1           # via flask
