--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         - "5000:5000"
     environment: 
         DC_API_SERVER_PROTOCOL: http
-        DC_API_SERVER_HOST: digicubes-rest
+        DC_API_SERVER_HOST: nebuhrhood
         DC_API_SERVER_PORT: 3000
 
     depends_on:
