--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,8 @@ idna==2.10
     # via
     #   email-validator
     #   requests
+importlib-metadata==3.10.0
+    # via markdown
 itsdangerous==1.1.0
     # via
     #   flask
@@ -54,6 +56,8 @@ markupsafe==1.1.1
     #   -r requirements.in
     #   jinja2
     #   wtforms
+pydantic==1.8.1
+    # via -r requirements.in
 pyjwt==2.0.1
     # via -r requirements.in
 python-dotenv==0.16.0
@@ -66,12 +70,18 @@ redis==3.5.3
     # via -r requirements.in
 requests==2.25.1
     # via -r requirements.in
+typing-extensions==3.7.4.3
+    # via
+    #   importlib-metadata
+    #   pydantic
 urllib3==1.26.4
     # via requests
 werkzeug==1.0.1
     # via flask
 wtforms==2.3.3
     # via flask-wtf
+zipp==3.4.1
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
