--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -55,7 +55,7 @@ dnspython==2.1.0
     #   email-validator
 doc8==0.8.1
     # via -r requirements-dev.in
-docutils==0.16
+docutils==0.17
     # via
     #   doc8
     #   readme-renderer
@@ -64,6 +64,12 @@ docutils==0.16
     #   sphinx
 email-validator==1.1.2
     # via -r requirements.txt
+flake8-isort==4.0.0
+    # via -r requirements-dev.in
+flake8==3.9.0
+    # via
+    #   -r requirements-dev.in
+    #   flake8-isort
 flask-babel==2.0.0
     # via -r requirements.txt
 flask-wtf==0.14.3
@@ -85,6 +91,7 @@ imagesize==1.2.0
 importlib-metadata==3.10.0
     # via
     #   -r requirements.txt
+    #   flake8
     #   keyring
     #   markdown
     #   pep517
@@ -95,7 +102,9 @@ importlib-metadata==3.10.0
 iniconfig==1.1.1
     # via pytest
 isort==5.8.0
-    # via pylint
+    # via
+    #   flake8-isort
+    #   pylint
 itsdangerous==1.1.0
     # via
     #   -r requirements.txt
@@ -126,7 +135,9 @@ markupsafe==1.1.1
     #   jinja2
     #   wtforms
 mccabe==0.6.1
-    # via pylint
+    # via
+    #   flake8
+    #   pylint
 mypy-extensions==0.4.3
     # via black
 packaging==20.9
@@ -150,10 +161,14 @@ py==1.10.0
     # via pytest
 pybadges==2.2.1
     # via -r requirements-dev.in
+pycodestyle==2.7.0
+    # via flake8
 pycparser==2.20
     # via cffi
 pydantic==1.8.1
     # via -r requirements.txt
+pyflakes==2.3.1
+    # via flake8
 pygments==2.8.1
     # via
     #   doc8
@@ -165,9 +180,9 @@ pylint==2.7.4
     # via -r requirements-dev.in
 pyparsing==2.4.7
     # via packaging
-pytest==6.2.2
+pytest==6.2.3
     # via -r requirements-dev.in
-python-dotenv==0.16.0
+python-dotenv==0.17.0
     # via -r requirements.txt
 pytz==2021.1
     # via
@@ -178,7 +193,7 @@ readme-renderer==29.0
     # via twine
 redis==3.5.3
     # via -r requirements.txt
-regex==2021.3.17
+regex==2021.4.4
     # via black
 requests-toolbelt==0.9.1
     # via twine
@@ -228,6 +243,8 @@ sphinxcontrib-serializinghtml==1.1.4
     # via sphinx
 stevedore==3.3.0
     # via doc8
+testfixtures==6.17.1
+    # via flake8-isort
 toml==0.10.2
     # via
     #   black
