--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,7 @@
 flask
 flask_wtf
 flask_babel
+orjson
 
 pyjwt
 requests
@@ -11,7 +12,7 @@ python-dotenv
 gunicorn
 libgravatar
 email-validator
-cattrs
-attrs
+# cattrs
+# attrs
 redis
 pydantic
