--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,8 @@
 #
 #    make up
 #
-attrs==20.3.0
-    # via
-    #   -r requirements.in
-    #   cattrs
 babel==2.9.0
     # via flask-babel
-cattrs==1.4.0
-    # via -r requirements.in
 certifi==2020.12.5
     # via requests
 chardet==4.0.0
@@ -56,6 +50,8 @@ markupsafe==1.1.1
     #   -r requirements.in
     #   jinja2
     #   wtforms
+orjson==3.5.1
+    # via -r requirements.in
 pydantic==1.8.1
     # via -r requirements.in
 pyjwt==2.0.1
