--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -50,13 +50,14 @@ dnspython==2.1.0
     #   email-validator
 doc8==0.8.1
     # via -r requirements-dev.in
-docutils==0.17
+docutils==0.16
     # via
     #   doc8
     #   readme-renderer
     #   restructuredtext-lint
     #   rstcheck
     #   sphinx
+    #   sphinx-rtd-theme
 email-validator==1.1.2
     # via -r requirements.txt
 flake8-isort==4.0.0
@@ -65,6 +66,8 @@ flake8==3.9.0
     # via
     #   -r requirements-dev.in
     #   flake8-isort
+flask-accept==0.0.6
+    # via -r requirements.txt
 flask-babel==2.0.0
     # via -r requirements.txt
 flask-wtf==0.14.3
@@ -72,6 +75,7 @@ flask-wtf==0.14.3
 flask==1.1.2
     # via
     #   -r requirements.txt
+    #   flask-accept
     #   flask-babel
     #   flask-wtf
 gunicorn==20.1.0
@@ -85,14 +89,7 @@ imagesize==1.2.0
     # via sphinx
 importlib-metadata==3.10.0
     # via
-    #   -r requirements.txt
-    #   flake8
     #   keyring
-    #   markdown
-    #   pep517
-    #   pluggy
-    #   pytest
-    #   stevedore
     #   twine
 iniconfig==1.1.1
     # via pytest
@@ -217,7 +214,7 @@ six==1.15.0
     #   sphinxcontrib-httpdomain
 snowballstemmer==2.1.0
     # via sphinx
-sphinx-rtd-theme==0.5.1
+sphinx-rtd-theme==0.5.2
     # via -r requirements-dev.in
 sphinx==3.5.3
     # via
@@ -248,19 +245,16 @@ toml==0.10.2
     #   pep517
     #   pylint
     #   pytest
-tqdm==4.59.0
+tqdm==4.60.0
     # via twine
 twine==3.4.1
     # via -r requirements-dev.in
 typed-ast==1.4.2
-    # via
-    #   astroid
-    #   black
+    # via black
 typing-extensions==3.7.4.3
     # via
     #   -r requirements.txt
     #   black
-    #   importlib-metadata
     #   pydantic
 urllib3==1.26.4
     # via
@@ -279,10 +273,7 @@ wtforms==2.3.3
     #   -r requirements.txt
     #   flask-wtf
 zipp==3.4.1
-    # via
-    #   -r requirements.txt
-    #   importlib-metadata
-    #   pep517
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
