--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,8 @@ idna==2.10
     # via
     #   email-validator
     #   requests
+importlib-metadata==3.10.0
+    # via markdown
 itsdangerous==1.1.0
     # via
     #   flask
@@ -42,7 +44,7 @@ jinja2==2.11.3
     # via
     #   flask
     #   flask-babel
-libgravatar==0.2.5
+libgravatar==1.0.0
     # via -r requirements.in
 markdown==3.3.4
     # via -r requirements.in
@@ -68,13 +70,19 @@ redis==3.5.3
 requests==2.25.1
     # via -r requirements.in
 typing-extensions==3.7.4.3
-    # via pydantic
+    # via
+    #   importlib-metadata
+    #   pydantic
 urllib3==1.26.4
     # via requests
 werkzeug==1.0.1
     # via flask
+whitenoise==5.2.0
+    # via -r requirements.in
 wtforms==2.3.3
     # via flask-wtf
+zipp==3.4.1
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
